--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @import "tailwindcss";
 
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
 
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #667487;
+    border-radius: 4px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #e5e7eb;
+    border-radius: 4px;
+  }
+}
